# Copyright 2015 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/config/android/config.gni")
import("//build/config/android/rules.gni")

assert(is_android)

source_set("android") {
  sources = [
    "bluetooth_jni_registrar.cc",
    "bluetooth_jni_registrar.h",
  ]

  defines = [ "DEVICE_BLUETOOTH_IMPLEMENTATION" ]

  deps = [
    "//base",
  ]
}

generate_jni("bluetooth_jni") {
  sources = [
    "java/src/org/chromium/device/bluetooth/BluetoothAdapter.java",
  ]
  jni_package = "bluetooth"
}
